changed navbar behavior to avoid squishing on awkward window sizes

--- a/components/Navbar/index.module.scss
+++ b/components/Navbar/index.module.scss
@@ -2,17 +2,19 @@
   display: flex;
   justify-content: space-between;
   z-index: 3;
-  align-items: flex-end;
-  padding: 1rem;
-  // @media screen and (max-width: 600px) {
-  //   // position: absolute;
-  //   // position: static;
-  // }
+  align-items: center;
+  // padding: 1.5rem 6.5rem;
+  margin: 1.5rem 5vw;
+  @media screen and (max-width: 600px) {
+    // position: absolute;
+    // position: static;
+    // align-items: flex-end;
+  }
 
   .logo {
-    min-width: 125px;
+    // min-width: 125px;
+    max-width: 200px;
     width: 100%;
-    max-width: 250px;
     display: block;
   }
   .mobileMenu {
@@ -31,10 +33,10 @@
     .menuList {
       display: flex;
       align-items: center;
-      padding: 0 0;
+      padding: 10px 10px;
+      gap: 10px;
 
       .navLink {
-        padding: 10px 10px;
         font-size: 16px;
         font-weight: 400;
         text-decoration: none;
@@ -43,13 +45,18 @@
         &:hover {
           color: #41ead4;
         }
+        @media screen and (max-width: 900px) {
+          font-size: 14px;
+        }
+        @media screen and (max-width: 800px) {
+          font-size: 12px;
+        }
       }
       .navLinkFocused {
         color: #8e7dbe;
         &:hover {
           color: #8e7dbe;
         }
-        // }
       }
     }
   }
@@ -62,13 +69,8 @@
   justify-content: center;
   align-items: center;
   transition: height 3s;
-  // height: fit-content;
-
-  // li {
 
   .navLink {
-    // display: inline;
-    // padding: 10px 0;
     font-size: 16px;
     font-weight: 400;
     text-decoration: none;
@@ -79,41 +81,6 @@
     font-weight: 400;
     text-decoration: none;
     color: #8e7dbe;
-  }
-  // }
-}
-
-.menuBtn {
-  position: absolute;
-  z-index: 3;
-  right: 35px;
-  top: 35px;
-  cursor: pointer;
-  transition: all 450ms ease-in-out;
-  &.closer {
-    transform: rotate(180deg);
-  }
-}
-
-.btnLine {
-  width: 28px;
-  height: 4px;
-  margin: 0 0 5px 0;
-  background-color: #71c57f;
-  transition: all 450ms ease-in-out;
-  &.closer {
-    background-color: #e76e81;
-    &:nth-child(1) {
-      transform: rotate(45deg) translate(4px, 0px);
-      width: 20px;
-    }
-    &:nth-child(2) {
-      transform: translateX(-8px);
-    }
-    &:nth-child(3) {
-      transform: rotate(-45deg) translate(4px, 0px);
-      width: 20px;
-    }
   }
 }
 
@@ -187,22 +154,4 @@
   padding: 0.5rem;
   border-radius: 3px;
   margin: 1rem 0.5rem;
-}
-.connectButton {
-  padding: 0 0.5rem;
-  margin: 1rem 0.5rem;
-  @media screen and (max-width: 600px) {
-    padding: 0.5rem;
-  }
-}
-
-.navLinkFocused {
-  // font-size: 16px;
-  // font-weight: 400;
-  // text-decoration: none;
-  color: #8e7dbe;
-  // change color on hover
-  // &:hover {
-  //   color: #41ead4;
-  // }
 }
